// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button component renders a button 1`] = `
.sxyl5fn {
  background: unset;
  border: none;
  border-radius: var(--radii-0);
  cursor: pointer;
  display: flex;
  justify-content: center;
  align-items: center;
  font-family: var(--fonts-sans);
  font-size: var(--fontSizes-md);
  font-weight: 500;
  height: var(--sizes-2);
  letter-spacing: 0.02em;
  line-height: 1.4;
  transition: all 125ms ease-out;
  text-decoration: none;
  padding-left: var(--space-4);
  padding-right: var(--space-4);
}

.sxyl5fn {
  padding-top: var(--space-2);
  padding-bottom: var(--space-2);
}

.sxyl5fn {
  white-space: nowrap;
  width: max-content;
}

.sxyl5fn[disabled] {
  opacity: 0.35;
  cursor: not-allowed;
}

.sxyl5fnxyrog--comp {
  background-color: var(--colors-primary500);
  color: white;
}

.sxyl5fnxyrog--comp:not([disabled]):hover,
.sxyl5fnxyrog--comp:not([disabled]):focus {
  background-color: var(--colors-primary900);
}

.sxyl5fnxyrog--comp:active {
  background-color: var(--colors-primary500);
}

.sxyl5fnxyrog--comp[disabled] {
  background-color: var(--colors-tonal300);
  color: var(--colors-tonal600);
}

<div>
  <button
    class="sxyl5fn sxyl5fnxyrog--comp sxyl5fn03kze--theme-primary sxyl5fn03kze--appearance-solid"
  >
    BUTTON
  </button>
</div>
`;

exports[`Button component renders a disabled button 1`] = `
.sxyl5fn {
  background: unset;
  border: none;
  border-radius: var(--radii-0);
  cursor: pointer;
  display: flex;
  justify-content: center;
  align-items: center;
  font-family: var(--fonts-sans);
  font-size: var(--fontSizes-md);
  font-weight: 500;
  height: var(--sizes-2);
  letter-spacing: 0.02em;
  line-height: 1.4;
  transition: all 125ms ease-out;
  text-decoration: none;
  padding-left: var(--space-4);
  padding-right: var(--space-4);
}

.sxyl5fn {
  padding-top: var(--space-2);
  padding-bottom: var(--space-2);
}

.sxyl5fn {
  white-space: nowrap;
  width: max-content;
}

.sxyl5fn[disabled] {
  opacity: 0.35;
  cursor: not-allowed;
}

.sxyl5fnxyrog--comp {
  background-color: var(--colors-primary500);
  color: white;
}

.sxyl5fnxyrog--comp:not([disabled]):hover,
.sxyl5fnxyrog--comp:not([disabled]):focus {
  background-color: var(--colors-primary900);
}

.sxyl5fnxyrog--comp:active {
  background-color: var(--colors-primary500);
}

.sxyl5fnxyrog--comp[disabled] {
  background-color: var(--colors-tonal300);
  color: var(--colors-tonal600);
}

.sxyl5fn8heda--comp {
  box-shadow: inset 0 0 0 2px;
  color: var(--colors-primary500);
  background-color: white;
}

.sxyl5fn8heda--comp:not([disabled]):hover,
.sxyl5fn8heda--comp:not([disabled]):focus {
  text-decoration: none;
  color: var(--colors-primary900);
  background-color: white;
}

.sxyl5fn8heda--comp:active {
  color: var(--colors-primary500);
}

.sxyl5fn8heda--comp[disabled] {
  background-color: white;
  color: var(--colors-primary900);
}

<div>
  <button
    class="sxyl5fn sxyl5fnxyrog--comp sxyl5fn03kze--theme-primary sxyl5fn03kze--appearance-solid"
    disabled=""
  >
    BUTTON
  </button>
</div>
`;

exports[`Button component renders a disabled secondary outline button 1`] = `
.sxyl5fn {
  background: unset;
  border: none;
  border-radius: var(--radii-0);
  cursor: pointer;
  display: flex;
  justify-content: center;
  align-items: center;
  font-family: var(--fonts-sans);
  font-size: var(--fontSizes-md);
  font-weight: 500;
  height: var(--sizes-2);
  letter-spacing: 0.02em;
  line-height: 1.4;
  transition: all 125ms ease-out;
  text-decoration: none;
  padding-left: var(--space-4);
  padding-right: var(--space-4);
}

.sxyl5fn {
  padding-top: var(--space-2);
  padding-bottom: var(--space-2);
}

.sxyl5fn {
  white-space: nowrap;
  width: max-content;
}

.sxyl5fn[disabled] {
  opacity: 0.35;
  cursor: not-allowed;
}

.sxyl5fnxyrog--comp {
  background-color: var(--colors-primary500);
  color: white;
}

.sxyl5fnxyrog--comp:not([disabled]):hover,
.sxyl5fnxyrog--comp:not([disabled]):focus {
  background-color: var(--colors-primary900);
}

.sxyl5fnxyrog--comp:active {
  background-color: var(--colors-primary500);
}

.sxyl5fnxyrog--comp[disabled] {
  background-color: var(--colors-tonal300);
  color: var(--colors-tonal600);
}

.sxyl5fn8heda--comp {
  box-shadow: inset 0 0 0 2px;
  color: var(--colors-primary500);
  background-color: white;
}

.sxyl5fn8heda--comp:not([disabled]):hover,
.sxyl5fn8heda--comp:not([disabled]):focus {
  text-decoration: none;
  color: var(--colors-primary900);
  background-color: white;
}

.sxyl5fn8heda--comp:active {
  color: var(--colors-primary500);
}

.sxyl5fn8heda--comp[disabled] {
  background-color: white;
  color: var(--colors-primary900);
}

.sxyl5fn08yia--comp {
  box-shadow: inset 0 0 0 2px;
  color: var(--colors-secondary500);
  background-color: white;
}

.sxyl5fn08yia--comp:not([disabled]):hover,
.sxyl5fn08yia--comp:not([disabled]):focus {
  text-decoration: none;
  color: var(--colors-secondary900);
  background-color: white;
}

.sxyl5fn08yia--comp:active {
  color: var(--colors-secondary500);
}

.sxyl5fn08yia--comp[disabled] {
  background-color: white;
  color: var(--colors-secondary900);
}

<div>
  <button
    class="sxyl5fn sxyl5fn08yia--comp sxyl5fn03kze--theme-secondary sxyl5fn03kze--appearance-outline"
    disabled=""
  >
    BUTTON
  </button>
</div>
`;

exports[`Button component renders a outline button 1`] = `
.sxyl5fn {
  background: unset;
  border: none;
  border-radius: var(--radii-0);
  cursor: pointer;
  display: flex;
  justify-content: center;
  align-items: center;
  font-family: var(--fonts-sans);
  font-size: var(--fontSizes-md);
  font-weight: 500;
  height: var(--sizes-2);
  letter-spacing: 0.02em;
  line-height: 1.4;
  transition: all 125ms ease-out;
  text-decoration: none;
  padding-left: var(--space-4);
  padding-right: var(--space-4);
}

.sxyl5fn {
  padding-top: var(--space-2);
  padding-bottom: var(--space-2);
}

.sxyl5fn {
  white-space: nowrap;
  width: max-content;
}

.sxyl5fn[disabled] {
  opacity: 0.35;
  cursor: not-allowed;
}

.sxyl5fnxyrog--comp {
  background-color: var(--colors-primary500);
  color: white;
}

.sxyl5fnxyrog--comp:not([disabled]):hover,
.sxyl5fnxyrog--comp:not([disabled]):focus {
  background-color: var(--colors-primary900);
}

.sxyl5fnxyrog--comp:active {
  background-color: var(--colors-primary500);
}

.sxyl5fnxyrog--comp[disabled] {
  background-color: var(--colors-tonal300);
  color: var(--colors-tonal600);
}

.sxyl5fn8heda--comp {
  box-shadow: inset 0 0 0 2px;
  color: var(--colors-primary500);
  background-color: white;
}

.sxyl5fn8heda--comp:not([disabled]):hover,
.sxyl5fn8heda--comp:not([disabled]):focus {
  text-decoration: none;
  color: var(--colors-primary900);
  background-color: white;
}

.sxyl5fn8heda--comp:active {
  color: var(--colors-primary500);
}

.sxyl5fn8heda--comp[disabled] {
  background-color: white;
  color: var(--colors-primary900);
}

<div>
  <button
    class="sxyl5fn sxyl5fn8heda--comp sxyl5fn03kze--theme-primary sxyl5fn03kze--appearance-outline"
  >
    BUTTON
  </button>
</div>
`;
